# GeometryTools

./: CMakeLists.txt  README.md
code/: point.cpp  point.hpp  point2.cpp  point2.hpp  triangle.cpp  triangle.hpp  triangle2.cpp  triangle2.hpp  vector.cpp  vector.hpp
